implemented user address lookup

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <script src="scripts/app.js"></script>
 </head>
 <body>
-
+    <input type="text" placeholder="Enter address" id="address-query">
     <button onclick="loadClient()">load</button>
-    <button onclick="execute()">Exectue</button>
+    <button onclick="execute()">execute</button>
 
 </body>
 </html>
