--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,16 @@
     <script src="scripts/app.js"></script>
 </head>
 <body>
-    <input type="text" placeholder="Enter address" id="address-query">
+    <input type="text" placeholder="Enter full address" id="address-query">
     <button onclick="loadClient()">load</button>
     <button onclick="execute()">execute</button>
+
+    <div id="profile-card">
+        <ul>
+            <li id="office"></li>
+            <li id="name"></li>
+        </ul>
+    </div>
 
 </body>
 </html>
