was able to make it display data for every official not just one

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,10 @@
     <button onclick="loadClient()">load</button>
     <button onclick="execute()">execute</button>
 
-    <div id="profile-card">
-        <ul>
-            <li id="office"></li>
-            <li id="name"></li>
-        </ul>
+    <div id="profile-section">
+        <div id="profile-card" style="background-color:DodgerBlue">
+            
+        </div>
     </div>
 
 </body>
