made API load when page loads

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="text" placeholder="Enter full address" id="address-query">
-    <button onclick="loadClient()">load</button>
+    <!-- <button onclick="loadClient()">load</button> -->
     <button onclick="execute()">execute</button>
 
     <div id="profile-section">
