implmented cards & columns

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,27 @@
    <section class="section has-background-primary" id="us-senator">
        <div class="container">
             <h2 class="title">U.S Senator</h2>
+
+            <div class="columns">
+                <div class="column">
+                  
+                    <div class="card">
+                        <div class="card-content has-background-warning">
+                            <div class="content">
+                                <p class="title is-3" id="name"></p>
+                                <p class="subtitle is-5" id="party"></p>
+                                <p class="subtitle is-5" id="phone"></p>
+                                <p class="subtitle is-5" id="url"></p>
+                            </div>
+                        </div>
+                    </div> 
+
+                </div>
+               
+              </div>
+
        </div>
+
    </section>
 
 
