now able to dynamically add profile cards

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
        <div class="container">
             <h2 class="title">U.S Senator</h2>
 
-            <div class="columns">
-                <div class="column">
+            <div class="columns" id="appendHere">
+                <div class="column" id="profile">
                   
                     <div class="card">
                         <div class="card-content has-background-warning">
