--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
    <!--Section for U.S Senators-->
    <section class="section has-background-primary" id="us-senator">
        <div class="container">
-            <h2 class="title">U.S Senator</h2>
+            <h2 class="title">U.S Senators</h2>
 
             <div class="columns" id="appendHere">
                 <div class="column" id="profile">
@@ -49,7 +49,22 @@
 
    </section>
 
+<template>
+    <div class="column" id="profile">
+                  
+        <div class="card">
+            <div class="card-content has-background-warning">
+                <div class="content">
+                    <p class="title is-3" id="name"></p>
+                    <p class="subtitle is-5" id="party"></p>
+                    <p class="subtitle is-5" id="phone"></p>
+                    <p class="subtitle is-5" id="url"></p>
+                </div>
+            </div>
+        </div> 
 
+    </div>
+</template>
 
 </body>
 </html>
