--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
        <div class="container">
             <h2 class="title">U.S Senators</h2>
 
-            <div class="columns" id="appendHere">
-                <div class="column" id="profile">
+            <div class="columns" id="sen-columns">
+                <div class="column is-one-third" id="sen-profile">
                   
                     <div class="card">
                         <div class="card-content has-background-warning">
@@ -55,8 +55,8 @@
     <div class="container">
          <h2 class="title">U.S Representatives</h2>
 
-         <div class="columns" id="appendHere">
-             <div class="column" id="rep-profile">
+         <div class="columns" id="rep-columns">
+             <div class="column is-one-third" id="rep-profile">
                
                  <div class="card">
                      <div class="card-content has-background-warning">
