added state senator and assemblymen

--- a/src/index.html
+++ b/src/index.html
@@ -74,5 +74,52 @@
 </section>
 
 
+    <!--Section for State Senator-->
+    <section class="section has-background-info" id="us-rep">
+        <div class="container">
+            <h2 class="title">State Senator</h2>
+
+            <div class="columns" id="state-sen-columns">
+                <div class="column is-one-third" id="state-sen-profile">
+                
+                    <div class="card">
+                        <div class="card-content has-background-warning">
+                            <div class="content">
+                                <p class="title is-3" id="state-sen-name"></p>
+                                <p class="subtitle is-5" id="state-sen-party"></p>
+                                <p class="subtitle is-5" id="state-sen-phone"></p>
+                                <p class="subtitle is-5" id="state-sen-url"></p>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Section for Assembly Member-->
+    <section class="section has-background-info" id="assem">
+        <div class="container">
+            <h2 class="title">State Assemblymember</h2>
+
+            <div class="columns" id="assem-columns">
+                <div class="column is-one-third" id="assem-profile">
+                
+                    <div class="card">
+                        <div class="card-content has-background-warning">
+                            <div class="content">
+                                <p class="title is-3" id="assem-name"></p>
+                                <p class="subtitle is-5" id="assem-party"></p>
+                                <p class="subtitle is-5" id="assem-phone"></p>
+                                <p class="subtitle is-5" id="assem-url"></p>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
