made data container hidden until requested

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body> 
-
+<br>
    <div class="container">
         <h1 class="title" style="text-align: center;">Local Officials</h1>
         <div class="columns is-centered">
@@ -27,6 +27,7 @@
         </div>
   </div>
 
+  <div class="container" id="section-container" style="display: none;">
    <!--Section for U.S Senators-->
    <section class="section has-background-info" id="us-senator">
        <div class="container">
@@ -120,6 +121,7 @@
         </div>
     </section>
 
+</div>
 
 </body>
 </html>
